# git-pulse

./: .gitignore  LICENSE  README.md  pyproject.toml
src/git_pulse/: cli.py  config.py
src/git_pulse/analyst/: engine.py  models.py  prompts.py
src/git_pulse/collector/: git_history.py  hotspot_detector.py  metrics.py  models.py
src/git_pulse/renderer/: json_output.py  terminal.py
tests/: test_cli.py  test_config.py
tests/test_analyst/: test_engine.py  test_prompts.py
tests/test_collector/: test_git_history.py  test_hotspot_detector.py  test_metrics.py  test_models.py
tests/test_renderer/: test_json_output.py  test_terminal.py
